Stylesheet/emote/tag updates 2012-11-13

--- a/source-css/beautybrass.css
+++ b/source-css/beautybrass.css
@@ -30,3 +30,13 @@ a[href|="/brassdance"]
     width: 92px;
     height: 114px;
 }
+a[href|="/couchflip"]
+{
+ 
+ background-image: url(%%whategowhatareyoutalkingabout%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    width: 217px;
+    height: 118px;
+}
