--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -1153,3 +1153,16 @@ a[href|="/mcragepants"] {
     height: 205px;
     background-position: -200px -0px;
 }
+
+
+a[href|="/gak"]
+{
+
+ background-image: url(%%gak%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 200px;
+    width: 187px;
+
+}
