--- a/source-css/mylittleserver.css
+++ b/source-css/mylittleserver.css
@@ -186,6 +186,14 @@ a[href|="/mlsd3"], a[href|="/intimidate"] {
     height: 149px;
     background-image: url(%%intimidate%%)
     }
+a[href|="/mlsd4"], a[href|="/quills"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 161px;
+    background-image: url(%%quills%%)
+    }
 END-PONYSCRIPT-IGNORE{color:red;}
 
 /*Changing Names*/
