--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -717,6 +717,14 @@ a[href|="/seriouslydressedup"] {
  height: 130px;
  background-image: url(%%SeriouslyDressedUp%%)
  }
+a[href|="/superseriouslypinkie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 176px;
+    height: 244px;
+    background-image:url(%%pinkles%%)
+}
 a[href|="/seriouslybanned"] {
     display: block;
     clear: none;
