--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -196,15 +196,15 @@ img#header-img{
     
     content: "Info about the new flair system";
     background-color: #F2F2F2;
-    background-image: url(%%vs2%%);
+    background-image: url(%%brass%%);
     background-repeat: no-repeat;
-    background-position: -140px -13px;
+    background-position: 0px 0px; /*-140px -13px;*/
     font-family: verdana, sans-serif;
     font-size: 12px;
     font-weight: bold;
     color: #555555;
     text-align: left;
-    padding: 13px 5px 13px 75px;
+    padding: 20px 5px 13px 45px;
     margin: 15px;
     margin-left: 4px;
     border-radius: 8px
@@ -432,7 +432,7 @@ body.res-nightmode:first-of-type .flair { background-color: transparent!importan
 
 /*vs_start*/
 	
-a[href|='/vswink'],a[href|='/vs22'],a[href|='/shrug'],a[href|='/vsshrug'],a[href|='/tableflip'],a[href|='/vsbass'],a[href|='/vs15'],a[href|='/vscurious'],a[href|='/vs13'],a[href|='/vsdeal'],a[href|='/vs01'],a[href|='/vsderp'],a[href|='/vs02'],a[href|='/vsfilly'],a[href|='/vs07'],a[href|='/vshair'],a[href|='/vs20'],a[href|='/vshappy'],a[href|='/vs14'],a[href|='/vshey'],a[href|='/vs12'],a[href|='/vshooves'],a[href|='/vs04'],a[href|='/vsjuice'],a[href|='/vs23'],a[href|='/vslook'],a[href|='/vs05'],a[href|='/vslying'],a[href|='/vs03'],a[href|='/vsmeh'],a[href|='/vs21'],a[href|='/vsmine'],a[href|='/vs25'],a[href|='/vsmog'],a[href|='/vs08'],a[href|='/vsnope'],a[href|='/vs26'],a[href|='/vsohyou'],a[href|='/vs00'],a[href|='/vsomg'],a[href|='/vs06'],a[href|='/vsoooo'],a[href|='/vs16'],a[href|='/vssad'],a[href|='/vs10'],a[href|='/vssup'],a[href|='/vs24'],a[href|='/vstear'],a[href|='/vs11'],a[href|='/vswtf'],a[href|='/vs27'], a[href|='/vswhathefuck'],a[href|='/vsyds'],a[href|='/vs17'], a[href|='/vsyoudontsay'],a[href|='/vslaying'],a[href|='/laying'],a[href|='/vsplot'],a[href|='/vscute'],a[href|='/vs18'],a[href|='/vssalute'],a[href|='/vs28'],a[href|='/vsboring'], a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'], a[href|='/vssquee'] {
+a[href|='/vswink'],a[href|='/vs22'],a[href|='/shrug'],a[href|='/vsshrug'],a[href|='/tableflip'],a[href|='/vsbass'],a[href|='/vs15'],a[href|='/vscurious'],a[href|='/vs13'],a[href|='/vsdeal'],a[href|='/vs01'],a[href|='/vsderp'],a[href|='/vs02'],a[href|='/vsfilly'],a[href|='/vs07'],a[href|='/vshair'],a[href|='/vs20'],a[href|='/vshappy'],a[href|='/vs14'],a[href|='/vshey'],a[href|='/vs12'],a[href|='/vshooves'],a[href|='/vs04'],a[href|='/vsjuice'],a[href|='/vs23'],a[href|='/vslook'],a[href|='/vs05'],a[href|='/vslying'],a[href|='/vs03'],a[href|='/vsmeh'],a[href|='/vs21'],a[href|='/vsmine'],a[href|='/vs25'],a[href|='/vsmog'],a[href|='/vs08'],a[href|='/vsnope'],a[href|='/vs26'],a[href|='/vsohyou'],a[href|='/vs00'],a[href|='/vsomg'],a[href|='/vs06'],a[href|='/vsoooo'],a[href|='/vs16'],a[href|='/vssad'],a[href|='/vs10'],a[href|='/vssup'],a[href|='/vs24'],a[href|='/vstear'],a[href|='/vs11'],a[href|='/vswtf'],a[href|='/vs27'], a[href|='/vswhathefuck'],a[href|='/vsyds'],a[href|='/vs17'], a[href|='/vsyoudontsay'],a[href|='/vslaying'],a[href|='/laying'],a[href|='/vsplot'],a[href|='/vscute'],a[href|='/vs18'],a[href|='/vssalute'],a[href|='/vs28'],a[href|='/vsboring'], a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'], a[href|='/vssquee'],a[href|='/vs19'],a[href|='/vs29'], a[href|='/vseyeroll'],a[href|='/vsheh'] {
     display: block;
     clear: none;
     float: left;
@@ -473,6 +473,8 @@ a[href|='/vssalute'] {width:187px; height:142px; background-position: -337px -0p
 a[href|='/vs28'],a[href|='/vsboring']  {width:70px; height:70px; background-position: -0px -150px}
 a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'] {width:59px; height:70px;background-position: -450px -253px}
 a[href|='/vssquee'] {width:102px; height:80px;background-position: -422px -147px}
+a[href|='/vs19'], a[href|='/vseyeroll']{width:80px; height:77px;background-position: -415px -672px}
+a[href|='/vs29'],a[href|='/vsheh']{width:67px; height:80px;background-position: -417px -749px}
 
 /* Other Emotes*/
 a[href|='/vsdance'] { width:110px; height:110px; background-image: url(%%vsdance%%); display: block; clear: none; float: left; }
@@ -642,7 +644,8 @@ a.author[href$="shadari"],
 a.author[href$="Serious_Hacker"],
 a.author[href$="Toklankitsune"],
 a.author[href$="bryvood"],
-a.author[href$="otwem"]
+a.author[href$="otwem"],
+a.author[href$="Kireas"]
 
 { 
 font-size:0!important; 
@@ -667,7 +670,8 @@ a.author[href$="shadari"]:before ,
 a.author[href$="Serious_Hacker"]:before ,
 a.author[href$="Toklankitsune"]:before ,
 a.author[href$="bryvood"]:before ,
-a.author[href$="otwem"]:before 
+a.author[href$="otwem"]:before ,
+a.author[href$="Kireas"]:before 
 
 
 {
@@ -692,8 +696,10 @@ a.author[href$="Serious_Hacker"]:before {content:"DJ P0N-3"}
 a.author[href$="Toklankitsune"]:before {content:"DJ T0ki"}
 a.author[href$="bryvood"]:before {content:"DJ Toaster Scratchaloo"}
 a.author[href$="otwem"]:before {content:"Otwem Scratch"}
+a.author[href$="Kireas"]:before {content:"Octavia"}
 
 /* Replacing somebody's name color? Put the css here. */
 
 .author[href$="Ninja8259"] { color:aqua !important }
 .author[href$="mrjoker7854"] { color:pink !important }
+.author[href$="Kireas"] { color:purple !important }
