Stylesheet/emote/tag updates 2012-11-15

--- a/source-css/applejack.css
+++ b/source-css/applejack.css
@@ -112,7 +112,7 @@ background-color: #E3C19C !important;
     }
 div.footer-parent:after {
     width: 960px;
-    content: url(%%slowpink%%);
+    content: url(%%appletank%%);
     height: 370px;
     margin-bottom: -35px
     }
