--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -35,7 +35,7 @@ a[href|="/fs05"] { background-position: -0px -350px }
 a[href|="/fs15"] { background-position: -70px -350px }
 a[href|="/fs25"] { background-position: -140px -350px }
 
-a[href|="/fluttershythis"], a[href|="/shythis"], a[href|="/flutterthis"] {
+a[href|="/fluttershythis"], a[href|="/shythis"], a[href|="/flutterthis"], a[href|="/flutthis"] {
     display: block;
     clear: none;
     float: left;
