--- a/source-css/futemotes.css
+++ b/source-css/futemotes.css
@@ -330,3 +330,12 @@ a[href|="/horsecock"] {
     height: 65px;
     background-position: -0px -40px
     }
+
+a[href|="/hom3rbutt"] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image:url(%%evilhom3rRCR%%);
+    height: 250px;
+    width: 287px;
+}
