--- a/source-css/mlas1animotes.css
+++ b/source-css/mlas1animotes.css
@@ -53,6 +53,8 @@ a[href|='/derpystomp'] { width:105px; height:128px; background-image: url(%%derp
 a[href|='/omgomgomg'] { width:150px; height:150px; background-image: url(%%dashomg%%); background-position: 0px 0px; display: block; clear: none; float: left}
 a[href|='/twisax'] { width:151px; height:150px; background-image: url(%%twisax%%); background-position: 0px 0px; display: block; clear: none; float: left}
 
+a[href|='/woonadance'] { width:130px; height:106px; background-image: url(%%woonadance%%); display: block; clear: none; float: left}
+
 a[href|="/ppbop"], a[href|="/dashbop"], a[href|="/twibob"] {
     display: block;
     clear: none;
@@ -67,7 +69,7 @@ a[href|="/ppbop"], a[href|="/dashbop"], a[href|="/twibob"] {
  a[href|="/twibob"] {width: 145px;background-position: -309px -0px}
 
 
-a[href|="/ajbop"], a[href|="/shybop"], a[href|="/rarbop"] {
+a[href|="/ajbop"], a[href|="/shybop"], a[href|="/rarbop"], a[href|="/raribop"] {
     display: block;
     clear: none;
     float: left;
@@ -76,7 +78,7 @@ a[href|="/ajbop"], a[href|="/shybop"], a[href|="/rarbop"] {
 
  a[href|="/ajbop"] {width: 144px;background-position: -0px -0px}
  a[href|="/shybop"] {width: 150px;background-position: -145px -0px}
- a[href|="/rarbop"] {width: 145px;background-position: -300px -0px}
+ a[href|="/rarbop"], a[href|="/raribop"] {width: 145px;background-position: -300px -0px}
 
 a[href|='/clop00'], a[href|='/clop01'], a[href|='/clop02'], a[href|='/clop03'], a[href|='/clop04'], a[href|='/clop10'], a[href|='/clop11'], a[href|='/clop12'], a[href|='/clop13'], a[href|='/clop14'], a[href|='/clop20'], a[href|='/clop21'], a[href|='/clop22'], a[href|='/clop23'], a[href|='/clop24'], a[href|='/clop30'], a[href|='/clop31'], a[href|='/clop32'], a[href|='/clop33'], a[href|='/clop34'], a[href|='/clop40'], a[href|='/clop41'], a[href|='/clop42'], a[href|='/clop43'], a[href|='/clop44'],a[href|='/clop45'], a[href|='/clop46'], a[href|='/sur26'], a[href|='/rsur26'] {
     display: block;
