--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -194,7 +194,7 @@ div.titlebox span.number:after {
     }
 div.titlebox .users-online span.number:after
 {
-    content:" Whoken Gummieys";
+    content:" Tolkien Gummieys";
 }
 a[href="/spoiler"]:nth-of-type(n) {
     background: #000;
