--- a/source-css/mylittlecirclejerk.css
+++ b/source-css/mylittlecirclejerk.css
@@ -663,6 +663,15 @@ a[href="/dealwithit"]:after {
     background-image: url(%%Bananacutie%%);
     }
 
+a[href|="/evilhom3r"] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image:url(%%JVZTlY-z-Dtkp6lt%%);
+    height: 70px;
+    width: 48px;
+}
+
 START-PONYSCRIPT-IGNORE {
     color: red
     }
