--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -1,3 +1,5 @@
+/*CSS pre-derram fuckery: http://pastebin.com/dgDEPi34 | https://dl.dropbox.com/u/1277953/foodmanes.zip */
+
 /* LETS ORGANIZE THIS SHIT, I LIKE SHIT ORGANIZED
 
 lolyeah organization in foodmanes okay
@@ -43,16 +45,7 @@ margin-left: -577px;
 /* 0.5 the image width */
 z-index: -100
 }
-a[href|="/bro"]
-{
 
- background-image: url(%%doesntexist%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 255px;
-    width: 200px;
-}
 #siteTable .entry.likes:after {
 content: url(%%themagicalcouch%%);
 position: fixed;
@@ -65,7 +58,7 @@ z-index: -100
 }
 
 .modactions.approvelink {
- background-image:url(%%FLOUTSTALIN%%);background-position: -17px -561px;background-repeat: no-repeat;
+ background-image:url(%%floutstalin%%);background-position: -17px -561px;background-repeat: no-repeat;
 }
 
 /* Emotes */
@@ -95,219 +88,6 @@ h3 {
     color: red
     }
 
-a[href|="/rdskittles"]
-{
-
- background-image: url(%%rdskittles%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 200px;
-    width: 153px;
-}
-
-a[href|="/heresyourbeardemotesageireallyhopeyourehappywithyourself"]
-{
-
- background-image: url(%%beard%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 177px;
-    width: 267px;
-}
-
-a[href|="/sagepuke"]
-{
-
- background-image: url(%%sagepuke%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 250px;
-    width: 234px;
-}
-
-a[href|="/rariberry"]
-{
-
- background-image: url(%%rariberry%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 203px;
-    width: 200px;
-}
-
-a[href|="/doubledildo"]
-{
-
- background-image: url(%%doubledildo%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 114px;
-    width: 157px;
-}
-
-.flair:fuckingcolors{
-    background-color: green;
-}
-
-div.titlebox span.word {  
-display: none  
-}  
-div.titlebox span.number:after {  
-content: ",000 Quillmasters plus 1 Ave"
-}  
-
-body {
-   
-}
-
-/* nou */
-a[href|="/rdskittles"]
-{
-
- background-image: url(%%rdskittles%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 200px;
-    width: 153px;
-}
-
-a[href|="/lyrasup"]
-{
-background-image: url(%%lyrasup%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 173px;
-    width: 222px;
-}
-
-a[href|="/tacoshy"]
-{
-
- background-image: url(%%tacoshy%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 303px;
-    width: 300px;
-}
-a[href|="/sexualpleasure"]
-{
-
- background-image: url(%%ithinkso%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 117px;
-    width: 129px;
-}
-a[href|="/choctavia"]
-{
-
- background-image: url(%%choctavia%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 245px;
-    width: 141px;
-}
-
-
-a[href|="/greatyamsoffire"]
-{
-
- background-image: url(%%greatyamsoffire%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 217px;
-    width: 325px;
-}
-
-a[href|="/suckitave"]
-{
-
- background-image: url(%%Ave%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 200px;
-    width: 290px;
-}
-
-a[href|="/floutsy"]
-{
-
- background-image: url(%%floutsy%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 290px;
-    width: 277px;
-}
-
-a[href|="/sage"]
-{
-
- background-image: url(%%sage%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 224px;
-    width: 191px;
-}
-
-a[href|="/hitmonmatt"]
-{
-
- background-image: url(%%Mark%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 300px;
-    width: 400px;
-}
-
-a[href|="/floutstalin"]
-{
-
- background-image: url(%%FLOUTSTALIN%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 290px;
-    width: 277px;
-}
-
-a[href|="/fillytacoshy"]
-{
-
- background-image: url(%%fillytacoshy2%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 158px;
-    width: 200px;
-}
-
-/* Merry Christmas Bryvood. Sincerely, a couch */
-a[href|="/bryvood"]
-{
-
- background-image: url(%%bryvood%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 210px;
-    width: 243px;
-}
-
 
 div.titlebox span.word {  
 display: none  
@@ -315,7 +95,6 @@ display: none
 div.titlebox span.number:after {  
 content: ",000 People that are literally Hitler plus 1 Ave"
 }  
-
 
 
 /* Best Filly Sidebar */
@@ -330,70 +109,6 @@ content: ",000 People that are literally Hitler plus 1 Ave"
     z-index: 999
     }
 
-a[href|="/themagicalcouch"]
-{
-
- background-image: url(%%themagicalcouch%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 206px;
-    width: 308px;
-}
-
-a[href|="/ave"]
-{
-
- background-image: url(%%IAve%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 509px;
-    width: 941px;
-}
-
-a[href|="/quillmaster"]
-{
-
- background-image: url(%%thequillmaster%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 272px;
-    width: 320px;
-}
-a[href|="/quillmaster"]:active
-{
-
- background-image: url(%%thequillmaster%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 272px;
-    width: 320px;
-}
-
-
-a[href|="/jax"]
-{
-
- background-image: url(%%Jax%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 280px;
-    width: 368px;
-}
-
-a[href="/quails"]
-{
- background-image: url(%%quails%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 400px;
-    width: 500px;
-}
 
 .linkflair-pmod .author 
 {
@@ -623,16 +338,6 @@ a.author[href$="Conky_"]:after {
     letter-spacing: normal
     
     }
-
-a[href|="/clamyam"]
-{
-    background-image: url(%%clamyam%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 200px;
-    width: 268px;
-}
 
 a.author[href$="tacomantotherescue"] {
     font-size: 0px !important;
@@ -905,30 +610,6 @@ a[href|="/pepperminttwist"]
     width: 158px;
 }
 
-a[href|="/conky"]
-{
-
- background-image: url(%%conky%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 128px;
-    width: 300px;
-}
-
-a[href|="/applesaurus"]
-{
-
- background-image: url(%%applesaurus%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 200px;
-    width: 174px;
-}
-
-
-
 a[href|="/espeefun"]
 {
 
@@ -942,65 +623,6 @@ a[href|="/espeefun"]
 
 
 
-a[href|="/whatthefacannons"]
-{
-
- background-image: url(%%whatthefacannons%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 300px;
-    width: 478px;
-}
-
-
-a[href|="/greatrage"]
-{
-
- background-image: url(%%greatrage%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 200px;
-    width: 339px;
-}
-
-
-a[href|="/macinmane"]
-{
-
- background-image: url(%%bigmacinmane%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 143px;
-    width: 150px;
-}
-
-a[href|="/colgatemunism"] , a[href|="/colgatemunist"]
-{
-
- background-image: url(%%colgatemunist%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 196px;
-    width: 150px;
-
-}
-
-a[href|="/mechahitler"]
-{
-
- background-image: url(%%mechahitler%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 300px;
-    width: 236px;
-
-}
-
 a[href|="/twiststare"]
 {
 
@@ -1013,18 +635,6 @@ a[href|="/twiststare"]
 
 }
 
-a[href|="/wololo"]
-{
-
- background-image: url(%%WoLoLo%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 150px;
-    width: 150px;
-
-}
-
 /*** Bottom page Foodmane  ***/
 .footer-parent {
     height: 1000px;
@@ -1033,7 +643,7 @@ a[href|="/wololo"]
     clear: both;
     text-align: center;
     width: 100%;
-    background-image: url(%%carrotpumpkin%%);
+    background-image: url(%%shyFooter%%);
     background-position: bottom center;
     background-repeat: no-repeat;
     margin-bottom: 4px
@@ -1166,3 +776,66 @@ a[href|="/gak"]
     width: 187px;
 
 }
+a[href|="/applesaurus"],  a[href|="/bro"],  a[href|="/bryvood"],  a[href|="/choctavia"], a[href|="/clamyam"], a[href|="/colgatemunism"], a[href|="/colgatemunist"], a[href|="/conky"], a[href|="/sbtaffy"],   a[href|="/fillytacoshy"],   a[href|="/floutstalin"],   a[href|="/floutsy"],   a[href|="/greatrage"],   a[href|="/greatyamsoffire"],   a[href|="/hitmonmatt"],   a[href|="/lyrasup"],   a[href|="/macinmane"],   a[href|="/mechahitler"],   a[href|="/quillmaster"],   a[href|="/rariberry"],   a[href|="/rdskittles"],   a[href|="/sage"],   a[href|="/sagepuke"],   a[href|="/sexualpleasure"],   a[href|="/suckitave"],   a[href|="/tacoshy"],   a[href|="/themagicalcouch"],   a[href|="/wololo"]{   
+
+ background-image: url(%%transparentsheet%%) !important;
+    clear: none;
+    display: block;
+    float: left; }
+a[href|="/applesaurus"] {width:174px; height:200px; background-position: -2px -204px}
+a[href|="/bro"] {width:200px; height:255px; background-position: -381px -430px}
+a[href|="/bryvood"] {width:256px; height:289px; background-position: -905px -430px}
+a[href|="/choctavia"] {width:141px; height:245px; background-position: -2px -430px}
+a[href|="/clamyam"] {width:268px; height:200px; background-position: -178px -204px}
+a[href|="/colgatemunism"], a[href|="/colgatemunist"]{width:150px; height:196px; background-position: -1168px -2px}
+a[href|="/conky"] {width:300px; height:128px; background-position: -133px -2px}
+a[href|="/sbtaffy"] {width:652px; height:565px; background-position: -944px -722px}
+a[href|="/fillytacoshy"] {width:200px; height:158px; background-position: -739px -2px}
+a[href|="/floutstalin"] {width:277px; height:290px; background-position: -1442px -430px}
+a[href|="/floutsy"] {width:277px; height:290px; background-position: -1163px -430px}
+a[href|="/greatrage"] {width:339px; height:200px; background-position: -1320px -2px}
+a[href|="/greatyamsoffire"] {width:325px; height:217px; background-position: -1250px -204px}
+a[href|="/hitmonmatt"] {width:400px; height:300px; background-position: -240px -722px}
+a[href|="/lyrasup"] {width:225px; height:173px; background-position: -941px -2px}
+a[href|="/macinmane"] {width:150px; height:143px; background-position: -435px -2px}
+a[href|="/mechahitler"] {width:236px; height:300px; background-position: -2px -722px}
+a[href|="/quillmaster"] {width:320px; height:272px; background-position: -583px -430px}
+a[href|="/rariberry"] {width:200px; height:203px; background-position: -448px -204px}
+a[href|="/rdskittles"] {width:200px; height:200px; background-position: -1661px -2px}
+a[href|="/sage"] {width:191px; height:224px; background-position: -1577px -204px}
+a[href|="/sagepuke"] {width:234px; height:250px; background-position: -145px -430px}
+a[href|="/sexualpleasure"] {width:129px; height:117px; background-position: -2px -2px}
+a[href|="/suckitave"] {width:288px; height:205px; background-position: -650px -204px}
+a[href|="/tacoshy"] {width:300px; height:303px; background-position: -642px -722px}
+a[href|="/themagicalcouch"] {width:308px; height:206px; background-position: -940px -204px}
+a[href|="/wololo"] {width:150px; height:150px; background-position: -587px -2px}
+
+a[href|="/ave"],a[href|="/doubledildo"],a[href|="/heresyourbeardemotesageireallyhopeyourehappywithyourself"],a[href|="/jax"],a[href|="/quails"],a[href|="/whatthefacannons"]{
+
+ background-image: url(%%backgroundssheet%%) !important;
+    clear: none;
+    display: block;
+    float: left; }
+
+a[href|="/ave"] {width:941px; height:509px; background-position: -2px -2px}
+a[href|="/doubledildo"] {width:157px; height:114px; background-position: -2px -513px}
+a[href|="/heresyourbeardemotesageireallyhopeyourehappywithyourself"] {width:267px; height:177px; background-position: -161px -513px}
+a[href|="/jax"] {width:368px; height:280px; background-position: -430px -513px}
+a[href|="/quails"] {width:604px; height:453px; background-position: -2px -795px}
+a[href|="/whatthefacannons"] {width:478px; height:300px; background-position: -2px -1250px}
+
+
+/***   POST SPRITE SHEETS (To do once levels become higher)   ***/
+
+a[href|="/rwololo"]
+{
+
+ background-image: url(%%rwololo%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 150px;
+    width: 150px;
+
+}
+
