--- a/source-css/mylittlewtf.css
+++ b/source-css/mylittlewtf.css
@@ -1278,7 +1278,7 @@ a[href|='/twieyes'] {
     height: 203px;
     background-position: -2px -651px
     }
-a[href|='/abno'], a[href|='/ajno'], a[href|='/bird'], a[href|='/bonno'], a[href|='/dashno'], a[href|='/derpno'], a[href|='/dontask'], a[href|='/flutno'], a[href|='/lunano'], a[href|='/lyrano'], a[href|='/ppno'], a[href|='/rarno'], a[href|='/rlyrano'], a[href|='/sbno'], a[href|='/scootno'], a[href|='/tiano'], a[href|='/wop'] {
+a[href|='/abno'], a[href|='/ajno'], a[href|='/bird'], a[href|='/bonno'], a[href|='/dashno'], a[href|='/derpno'],a[href|='/penis'],  a[href|='/dontask'], a[href|='/flutno'], a[href|='/lunano'], a[href|='/lyrano'], a[href|='/ppno'], a[href|='/rarno'], a[href|='/rlyrano'], a[href|='/sbno'], a[href|='/scootno'], a[href|='/tiano'], a[href|='/wop'] {
     display: block;
     clear: none;
     float: left;
@@ -1309,7 +1309,7 @@ a[href|='/dashno'] {
     height: 200px;
     background-position: -446px -456px
     }
-a[href|='/derpno'] {
+a[href|='/derpno'], a[href|='/penis'] {
     width: 227px;
     height: 200px;
     background-position: -226px -658px
@@ -1789,12 +1789,16 @@ a[href|='/rsbf'] {
     height: 66px
     }
 
-a[href|='/ajheart'], a[href|='/berryheart'], a[href|='/colheart'], a[href|='/dashheart'], a[href|='/derpheart'], a[href|='/lunaheart'], a[href|='/lyraheart'], a[href|='/octheart'], a[href|='/pon3heart'], a[href|='/ppheart'], a[href|='/rarheart'], a[href|='/shyheart'], a[href|='/trixieheart'], a[href|='/twiheart'], a[href|='/wmgummy'] {
+a[href|='/ajheart'], a[href|='/berryheart'], a[href|='/colheart'], a[href|='/dashheart'], a[href|='/derpheart'], a[href|='/lunaheart'], a[href|='/lyraheart'], a[href|='/octheart'], a[href|='/pon3heart'], a[href|='/ppheart'], a[href|='/rarheart'], a[href|='/shyheart'], a[href|='/trixieheart'], a[href|='/twiheart'], a[href|='/wmgummy'], a[href|="/evilhom3r"] {
     display: block;
     clear: none;
     float: left;
     background-image: url(%%heart%%)
     }
+a[href|="/evilhom3r"] {
+    height: 70px;
+    width: 48px;
+    background-position: -444px -38px}
 a[href|='/ajheart'] {
     width: 132px;
     height: 200px;
