--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -1,3 +1,34 @@
+/* Linkable notification at the top */
+ .content {
+   margin-top: 33px;
+   }
+  .titlebox form {
+  position: static
+  }
+.titlebox .usertext-body .md p > em {
+   width: 60%;
+    background-color: #FFFEE6;
+    border: 1px solid #E1B000;
+    position: absolute;
+    top: 138px;
+    left: 3px;
+    z-index: 0;
+    margin: 0;
+    white-space:nowrap;
+    padding-left: 30px;
+    list-style: none;
+    display: block;
+    overflow: hidden;
+    border-radius:5px;
+    }
+.titlebox .usertext-body .md p > em li{
+margin: 0px;
+}
+.titlebox .usertext-body .md p > em a {
+font-weight:bold;
+text-decoration:underline;
+}
+
 /*hides the downvote arrow*/  
 
 .arrow.down {
