--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -2,11 +2,12 @@
     is currently editing it and the time and date, to avoid collisions. */
 /*No one follows this^*/
 /*css pls*/
+/*css stahp*/
 /* UTC time: http://www.time.gov/timezone.cgi?UTC/s/0 */
 
 /***********************************
 * EDITED BY: Lulu @ 10/31 06:59:47 UTC  *
-* lolwehaveupdatedthissomanytimessincemarchsonowichangedthedatealsotrixieisbestponykthx  *m
+* lolwehaveupdatedthissomanytimessincemarchsonowichangedthedatealsotrixieisbestponykthx  *
 ***********************************/
 
 /*Rule #1: Do NOT get Fluttershy started on the fauna! */
@@ -194,7 +195,7 @@ div.titlebox .users-online span.number:after
     }
 
 .sidecontentbox a.author[href$="/Orschmann"]:before {
-    content: "Grunkle Orsch";
+    content: "[](/orschsquint)";
     font-size: 10pt;
     color: #369;
     display:block;
@@ -362,7 +363,7 @@ a[href|="/b00"], a[href|="/b01"], a[href|="/b02"], a[href|="/b03"], a[href|="/b0
     float: left;
     width: 50px;
     height: 50px;
-    background-image: url(%%square-lazysquint%%) !important
+    background-image: url(%%square-aardvark%%) !important
     }
 a[href|="/rb00"], a[href|="/rb01"], a[href|="/rb02"], a[href|="/rb03"], a[href|="/rb04"], a[href|="/rb05"], a[href|="/rb06"], a[href|="/rb07"], a[href|="/rb08"], a[href|="/rb09"], a[href|="/rb10"], a[href|="/rb11"], a[href|="/rb12"], a[href|="/rb13"], a[href|="/rb14"], a[href|="/rb15"], a[href|="/rb16"], a[href|="/rb17"], a[href|="/rb18"], a[href|="/rb19"], a[href|="/rb20"], a[href|="/rb21"], a[href|="/rb22"], a[href|="/rb23"], a[href|="/rb24"], a[href|="/rb25"], a[href|="/rb26"], a[href|="/rb27"], a[href|="/rb28"], a[href|="/rb29"], a[href|="/rb30"], a[href|="/rb31"], a[href|="/rb32"], a[href|="/rb33"], a[href|="/rb34"], a[href|="/rb35"], a[href|="/rb36"], a[href|="/rb37"], a[href|="/rb38"], a[href|="/rb39"], a[href|="/rflutterfear"], a[href|="/rajcower"], a[href|="/rfluttersrs"], a[href|="/rppshrug"], a[href|="/rfluttershh"], a[href|="/rajugh"], a[href|="/rtrixiesmug"], a[href|="/rajwut"], a[href|="/rabwut"], a[href|="/rrarityjudge"], a[href|="/rppboring"], a[href|="/rajsly"], a[href|="/rraritydress"], a[href|="/rspikenervous"], a[href|="/rnewrainbowdash"], a[href|="/rflutteryay"], a[href|="/rraritywut"], a[href|="/rflutterwink"], a[href|="/rtwisquint"], a[href|="/rmanspike"], a[href|="/rrarityprimp"], a[href|="/rrarityyell"], a[href|="/reeyup"], a[href|="/rtakealetter"], a[href|="/rnoooo"], a[href|="/rsquintyjack"], a[href|="/rdumbfabric"], a[href|="/rrarityannoyed"], a[href|="/rraritywhine"], a[href|="/rcockatrice"], a[href|="/rtwirage"], a[href|="/rfluttershy"], a[href|="/rrdsmile"], a[href|="/rrdwut"], a[href|="/rdj"], a[href|="/rthreedog"], a[href|="/rspikepushy"], a[href|="/rraritywhy"], a[href|="/rsoawesome"], a[href|="/rrdcool"], a[href|="/rfacehoof"], a[href|="/rppseesyou"], a:hover[href|="/pinkiedance"], a:hover[href|="/sweetiedance"], a:hover[href|="/dashdance"] {
     display: block;
@@ -370,7 +371,7 @@ a[href|="/rb00"], a[href|="/rb01"], a[href|="/rb02"], a[href|="/rb03"], a[href|=
     float: left;
     width: 50px;
     height: 50px;
-    background-image: url(%%square-lazysquint-flipped%%) !important
+    background-image: url(%%square-aardvark-flipped%%) !important
     }
 a[href|="/b00"],
 a[href|="/rb00"],
@@ -2062,16 +2063,16 @@ Random Plounge Buggery
 
 /* FOOTER */
 .footer-parent {
-    height: 382px;
+    height: 850px;
     padding-bottom: 0px;
     clear: both;
     text-align: center;
     width: 100%;
-    background-image: url(%%BanksyBelle%%);
+    background-image: url(%%sbstarepeek-hypercube%%);
     /*background-position: bottom center;*/
     background-repeat: no-repeat;
     margin-bottom: -0px;
-    background-position: 50% 55px;/*Path's OCD was here. Fuck yo OCD, ~Veller*/
+    background-position: 50% 250px;/*Path's OCD was here. Fuck yo OCD, ~Veller*/
     }
 html:lang(nv) .side p a[href="http://reddit.com/r/MLPLounge/"]
 {
@@ -2100,9 +2101,9 @@ h3 {
 
 .side a[href="http://www.reddit.com/r/MLPLounge/new/"]{
    display: block;
-   height: 96px;
-   width: 70px;
-   background: url(%%tinywoona%%);
+   height: 87px;
+   width: 80px;
+   background: url(%%tinyrumble%%);
    position: fixed; 
    top: 260px;
    right: -10px;
@@ -2216,44 +2217,27 @@ input[value="t1_c6in1kg"] + .usertext-body .md p:after { content: "Twist is 20% 
 
 .thing.id-t1_c6ipose.comment a[href|="/bananaflip"]{background-image:url(%%lounge-emotes%%) !important;background-position: -140px -70px !important; width: 70px !important; height: 70px !important}
 
-/*Popart Sbstares:*/
-a[href|="/e13"],
-a[href|="/re13"],
-a[href|="/sbstare"],
-a[href|="/rsbstare"]
-{
- display: block;
- clear: none;
- float: left;
- width: 70px !important;
- height: 70px !important;
- background-image: url(%%popart-emotes%%) !important
+/*STUPID PLOUNGE HORSE CRAP*/
+.BLAME_PHEI_BEGIN {color:red;}
+a.id-t2_6ehzr {
+    display: inline-block;
+    font-size: 0;
+    letter-spacing: -20px;
+    overflow: hidden;
+    vertical-align: bottom
 }
 
-a[href|="/e13"] { background-position:0% 0%; }
-a[href|="/e13"] + a[href|="/e13"] { background-position:-100% 0%; }
-a[href|="/e13"] + a[href|="/e13"] + a[href|="/e13"] { background-position:0% -100%; }
-a[href|="/e13"] + a[href|="/e13"] + a[href|="/e13"] + a[href|="/e13"] { background-position:-100% -100%; }
-a[href|="/e13"] + a[href|="/e13"] + a[href="/sp"] + a[href|="/e13"], a[href|="/e13"] + a[href|="/e13"] + a[href="/sp"] + span + a[href|="/e13"] { background-position:0% -100%; margin-top:-16px; }
-a[href|="/e13"] + a[href|="/e13"] + a[href="/sp"] + a[href|="/e13"] + a[href|="/e13"], a[href|="/e13"] + a[href|="/e13"] + a[href="/sp"] + span + a[href|="/e13"] + a[href|="/e13"] { background-position:-100% -100%; margin-top:-16px; }
+a.id-t2_6ehzr:after {
+    content: "Snuggle-Bunny";
+    display: block;
+    font-size: 10px !important;
+    letter-spacing: normal;
+    visibility: visible !important;
+    margin-right:0.5em
+}
 
-a[href|="/sbstare"] { background-position:0% 0%; }
-a[href|="/sbstare"] + a[href|="/sbstare"] { background-position:-100% 0%; }
-a[href|="/sbstare"] + a[href|="/sbstare"] + a[href|="/sbstare"] { background-position:0% -100%; }
-a[href|="/sbstare"] + a[href|="/sbstare"] + a[href|="/sbstare"] + a[href|="/sbstare"] { background-position:-100% -100%; }
-a[href|="/sbstare"] + a[href|="/sbstare"] + a[href="/sp"] + a[href|="/sbstare"], a[href|="/sbstare"] + a[href|="/sbstare"] + a[href="/sp"] + span + a[href|="/sbstare"] { background-position:0% -100%; margin-top:-16px; }
-a[href|="/sbstare"] + a[href|="/sbstare"] + a[href="/sp"] + a[href|="/sbstare"] + a[href|="/sbstare"], a[href|="/sbstare"] + a[href|="/sbstare"] + a[href="/sp"] + span + a[href|="/sbstare"] + a[href|="/sbstare"] { background-position:-100% -100%; margin-top:-16px; }
-
-a[href|="/re13"] { background-position:-200% 0%; }
-a[href|="/re13"] + a[href|="/re13"] { background-position:-300% 0%; }
-a[href|="/re13"] + a[href|="/re13"] + a[href|="/re13"] { background-position:-200% -100%; }
-a[href|="/re13"] + a[href|="/re13"] + a[href|="/re13"] + a[href|="/re13"] { background-position:-300% -100%; }
-a[href|="/re13"] + a[href|="/re13"] + a[href="/sp"] + a[href|="/re13"], a[href|="/re13"] + a[href|="/re13"] + a[href="/sp"] + span + a[href|="/re13"] { background-position:-200% -100%; margin-top:-16px; }
-a[href|="/re13"] + a[href|="/re13"] + a[href="/sp"] + a[href|="/re13"] + a[href|="/re13"], a[href|="/re13"] + a[href|="/re13"] + a[href="/sp"] + span + a[href|="/re13"] + a[href|="/re13"] { background-position:-300% -100%; margin-top:-16px; }
-
-a[href|="/rsbstare"] { background-position:-200% 0%; }
-a[href|="/rsbstare"] + a[href|="/rsbstare"] { background-position:-300% 0%; }
-a[href|="/rsbstare"] + a[href|="/rsbstare"] + a[href|="/rsbstare"] { background-position:-200% -100%; }
-a[href|="/rsbstare"] + a[href|="/rsbstare"] + a[href|="/rsbstare"] + a[href|="/rsbstare"] { background-position:-300% -100%; }
-a[href|="/rsbstare"] + a[href|="/rsbstare"] + a[href="/sp"] + a[href|="/rsbstare"], a[href|="/rsbstare"] + a[href|="/rsbstare"] + a[href="/sp"] + span + a[href|="/rsbstare"] { background-position:-200% -100%; margin-top:-16px; }
-a[href|="/rsbstare"] + a[href|="/rsbstare"] + a[href="/sp"] + a[href|="/rsbstare"] + a[href|="/rsbstare"], a[href|="/rsbstare"] + a[href|="/rsbstare"] + a[href="/sp"] + span + a[href|="/rsbstare"] + a[href|="/rsbstare"] { background-position:-300% -100%; margin-top:-16px; }
+a.id-t2_6ehzr:hover:after
+{
+ content:"StabbyTheLlama"
+}
+.BLAME_PHEI_END {color:red;}
