--- a/source-css/mylittlesupportgroup.css
+++ b/source-css/mylittlesupportgroup.css
@@ -540,9 +540,18 @@ visibility: visible !important;
 display: none !important;
 }
 
-.footer-parent {
+/*.footer-parent {
 background: url(%%twifooter%%) no-repeat scroll left bottom transparent;
-}
+}*/
+
+body:not(.contributor) .id-t3_13519i .md p:nth-child(4) {
+    display:none
+    }
+    
+body:not(.contributor) .id-t3_13519i .md p:nth-child(5):before {
+    content:"I remember the days where MLSG was just a tiny little idea in our heads. The days where I would go out by myself, doing what each of us do every day in this community. I remember when we first gathered people together to help individuals. I remember when we decided to make a subreddit. I remember when we made that subreddit. It was great. "
+    }
+
 
 /***********************
 *
@@ -1661,12 +1670,11 @@ clear: both;
 .titlebox .usertext-body .md ol li + li {
     display: inline-block;
     float: right;
-    background: url(%%hat%%);
+    background: url(%%subscribers%%);
     width: 59px;
-    height: 60px;
+    height: 65px;
     margin-top: -33px;
     margin-left: -1px;
-    margin-bottom: -15px;
+    margin-bottom: 4px;
     margin-right: -40px
     }
-
