--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1627,7 +1627,7 @@ content:"";
 .titlebox .usertext-body .md ol li + li {
     display:inline-block;
     float:right;
-    background:url(%%pinkie-present-hat%%);
+    background:url(%%Rari-Hat%%);
     width:65px;
     height:61px;
     margin-top:-38px;
