Stylesheet/emote/tag updates 2012-11-20

--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -255,14 +255,14 @@ background-image: url(%%bj-anim%%) !important;
 
 a[href|="/bjbubbles"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"], a[href|="/grumpypip"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v24%%) !important;
+background-image: url(%%foe-em3-v25%%) !important;
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -279,6 +279,7 @@ a[href|="/qnwhsk"]{ background-position: 0px -1510px; width: 70px; height: 85px;
 a[href|="/bjwhiskey"]{ background-position: 0px -1905px; width: 96px; height: 149px;}
 a[href|="/crazyrampage"]{ background-position: 0px -2060px; width: 150px; height: 105px;}
 a[href|="/deus"]{ background-position: 0px -2170px; width: 150px; height: 139px;}
+a[href|="/grumpypip"]{ background-position: 0px -2315px; width: 142px; height: 150px;}
 
 
 a[href|="/advicebj"]
