--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -1,4 +1,4 @@
-div.titlebox span.word{display:none}div.titlebox .subscribers span.number:after{content:" Dunians"}div.titlebox .users-online span.number:after{content:" of them are Warriors"}
+div.titlebox span.word{display:none}div.titlebox .subscribers span.number:after{content:" Dunians"}div.titlebox .users-online span.number:after{content:" adventurin'."}
 
 /***********************
 *
