--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1084,19 +1084,20 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 */
 
 /* STOP SUBMITTING BORDERLANDS */
+/*
 #title-field.roundfield:before
 {
- content:"Remember that Gak is not pony and will be removed as a rule 3 violation!";
+ content:"Please do not submit anything about episode 3 until it officially airs on the Hub!";
  font-size:0.86em;
  padding:5px;
  border:1px solid #5f99cf;
  background-color:#EFF7FF;
- color:black;
+ color:red;
  font-weight: bold;
  display:block;
  margin-bottom: 10px;
 }
-
+*/
 
 /*NSFW.MOV*/
 /*
@@ -1627,11 +1628,11 @@ content:"";
 .titlebox .usertext-body .md ol li + li {
     display:inline-block;
     float:right;
-    background:url(%%Rari-Hat%%);
+    background:url(%%twilight-hat%%);
     width:65px;
-    height:61px;
-    margin-top:-38px;
-    margin-left:-3px;
+    height:54px;
+    margin-top:-31px;
+    margin-left:4px;
     margin-bottom:-14px;
     margin-right:-40px;
     }
