--- a/source-css/mylittleserver.css
+++ b/source-css/mylittleserver.css
@@ -194,6 +194,14 @@ a[href|="/mlsd4"], a[href|="/quills"] {
     height: 161px;
     background-image: url(%%quills%%)
     }
+a[href|="/mlse1"], a[href|="/skeptispike"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 168px;
+    height: 188px;
+    background-image: url(%%skeptispike%%)
+    }
 END-PONYSCRIPT-IGNORE{color:red;}
 
 /*Changing Names*/
