--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -1,19 +1,29 @@
+.md:after {
+   content: "";
+   background: url(%%c22%%)!important;
+   position:relative;
+   display: inline-block;
+   height: 83px;
+   width: 83px;
+   float:left
+ }
+
 /* Changes background  */
 body:first-of-type, body.res-nightmode:first-of-type {
    
-     background:  url(%%bubble%%)  no-repeat  fixed 60% 100% !important;
+     background:  url(%%rcrback%%)  no-repeat  fixed 60% 100% !important;
   
 } 
 
 /* Banner Image */
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%woobanner%%); 
+   background: url(%%tootbanner%%); 
   background-color: #e0d3c1 !important;
    /*   margin-top: -20px;*/
    background-repeat: no-repeat;
    background-position: 50% 0%;
-   height: 237px; /* 237 for meat's nice banner */
-
+   height: 280px; /* 237 for meat's nice banner */
+   position:relative
  }
 
 
@@ -35,7 +45,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
     }
 
 #header-img {
-    margin-top:150px; /* 80 for meat's nice banner */
+    margin-top:160px; /* 80 for meat's nice banner */
     margin-left: 0px;
     position: absolute
     }
@@ -55,9 +65,9 @@ body:first-of-type, body.res-nightmode:first-of-type {
     }
 
 .tabmenu:not(.formtab) {
-    margin-top: 220px; /* 223 for meat's nice banner */
+    margin-top: 266px; /* 223 for meat's nice banner */
     margin-left: 505px
-    }
+ }
 
 .tabmenu:not(.formtab) li a {
     color: #000000;
@@ -90,42 +100,9 @@ body.res-nightmode:first-of-type {background-color: transparent!important;}
 .side.res-nightmode:first-of-type > .content {background-color: transparent!important;}
 .side.res-nightmode:first-of-type {background-color: transparent!important}
 
-/* Announcement header box thingy. Jacked this from the main MLP sub.
-.content {
-    margin-top: 50px
-    }
-.pagename {
-    font-size: 12pt
-    }
-.titlebox form {
-    position: static
-    }
-.titlebox .usertext-body .md ol {
-    width: auto;
-     height: auto;
-   background: 5px 1px #EFF7FF;
-    border: 1px solid #5f99bcf;
-    position: absolute;
-    top: 100px;
-    left: 15px;
-    z-index: 999;
-    margin: 160px 310px 0 0;
-    padding:40px 1px 1px 80px;
-    list-style: none;
-    display: block;
-    white-space: normal;
-    overflow: hidden;
-    font-size: 12pt;
-    border-radius: 10px
-    }
-.titlebox .usertext-body .md ol li {
-    margin: 3px;
-    list-style: none
-    } */
-
 /*Announcement Box*/
 .content {
-    margin-top: 55px
+    margin-top: 60px
     }
 .pagename {
     font-size: 12pt
@@ -139,8 +116,8 @@ body.res-nightmode:first-of-type {background-color: transparent!important;}
     background:url(%%announcedance%%) no-repeat scroll 5px 1px #EFF7FF;
     font-size: 14px !important;
     position: absolute;
-    top: 256px;
-    left: 120px;
+    top: 20px;
+    left: 270px;
     z-index: 200;
     margin: -0px 310px 0 0;
     padding: 18px 1px 12px 45px;
@@ -470,6 +447,16 @@ a[href|='/trixfun'] {width:226px; height:152px; background-position: -0px -927px
 a[href|='/twifun'] {width:230px; height:152px; background-position: -0px -471px}
 
 
+a[href|='/nolove'] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%table11%%)
+    }
+
+a[href|='/nolove'] {width:206px; height:252px; background-position: -0px -0px}
+
+
 a[href|='/bmwat'], a[href|='/ch35'], a[href|='/chnuzzle'], a[href|='/cheerious'], a[href|='/cheerlikesit'], a[href|='/cmcexcited'], a[href|='/cordwithit'], a[href|='/crazypie'], a[href|='/derpoops'], a[href|='/disamused'], a[href|='/disangry'], a[href|='/disexcited'], a[href|='/diskate'], a[href|='/foryou'], a[href|='/genetics'], a[href|='/genius'], a[href|='/gildafury'], a[href|='/herhorn'], a[href|='/gildafriendship'], a[href|='/hipstertrixie'], a[href|='/iwapprove'], a[href|='/noidea'], a[href|='/notenoughbooks'], a[href|='/rarimad'], a[href|='/twinuzzle'] {
     display: block;
     clear: none;
@@ -551,8 +538,8 @@ a[href|='/cowpony'] {width:147px; height:177px; background-position: -0px -2022p
 a[href|='/creamsicle'] {width:127px; height:163px; background-position: -0px -2775px}
 a[href|='/diswut'] {width:174px; height:202px; background-position: -0px -960px}
 a[href|='/dod'] {width:110px; height:127px; background-position: -141px -2478px}
-a[href|='/dresscord'], a[href|='/ishygdadt'] {width:251px; height:202px; background-position: -0px -0px}
 a[href|='/dresscord'] {width:158px; height:252px; background-position: -0px -1466px}
+a[href|='/dresscord'], a[href|='/ishygdadt'] {width:251px; height:202px; background-position: -0px -0px}
 a[href|='/eagleeye'], a[href|='/hawkeye'] {width:160px; height:152px; background-position: -0px -1314px}
 a[href|='/flutterpout'] {width:130px; height:127px; background-position: -0px -2648px}
 a[href|='/frightenpie'] {width:113px; height:152px; background-position: -130px -2757px}
