--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -839,3 +839,62 @@ a[href|="/rwololo"]
 
 }
 
+a[href|="/twicandy"]
+{
+
+ background-image: url(%%twicandy%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 150px;
+    width: 122px;
+
+}
+
+a[href|="/betty"]
+{
+
+ background-image: url(%%betty%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 133px;
+    width: 150px;
+
+}
+
+a[href|="/sweetiesteak"]
+{
+
+ background-image: url(%%sweetiesteak%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 122px;
+    width: 200px;
+
+}
+
+a[href|="/spitfirefire"]
+{
+
+ background-image: url(%%spitfire%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 181px;
+    width: 200px;
+
+}
+
+a[href|="/likeoneofus"]
+{
+
+ background-image: url(%%likeoneofus%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 173px;
+    width: 220px;
+
+}
