--- a/source-css/mylittlelistentothis.css
+++ b/source-css/mylittlelistentothis.css
@@ -1397,7 +1397,7 @@ a[href|="/pheicry"] {
     height: 131px
 }
 
-a[href|="/phei"] {
+a[href|="/phei"], a[href|="/rainbowdash"], a[href|="/applejack"], a[href|="/rarity"], a[href|="/pinkiepie"]  {
     background-image: url(%%emotephei%%);
     clear: none;
     display: block;
