--- a/source-css/mylittleserver.css
+++ b/source-css/mylittleserver.css
@@ -202,6 +202,14 @@ a[href|="/mlse1"], a[href|="/skeptispike"] {
     height: 188px;
     background-image: url(%%skeptispike%%)
     }
+a[href|="/mlse2"], a[href|="/mybrand"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 210px;
+    height: 230px;
+    background-image: url(%%mybrand%%)
+    }
 END-PONYSCRIPT-IGNORE{color:red;}
 
 /*Changing Names*/
