--- a/source-css/twilightsparkle.css
+++ b/source-css/twilightsparkle.css
@@ -444,6 +444,15 @@ a[href|="/ts07"], a[href|="/rts07"], a[href|="/tsstare"], a[href|="/rtsstare"] {
  background-position: -0px -490px;
 }
 
+a[href|="/trixie"],a[href|="/twilightsealofdisapproval"]
+{
+ display: block;
+ clear: none;
+ float: left;
+ width: 225px;
+ height: 220px;
+ background-image: url(%%trixie%%) !important
+}
 /********** MAIN SUB EMOTES SUPER COPY+PASTE (Because not everbrony has reddit-wide emotes!) **********/
 START-PONYSCRIPT-IGNORE{color: red}
 /***********
